--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </div>
 
   <!-- Birthday Song -->
-  <audio controls autoplay loop>
-    <source src="Happy_birthday_to_you_MIDI(chosic.com).mp3">
+  <audio controls autoplay loop id="birthdaySong">
+    <source src="Happy_birthday_to_you_MIDI(chosic.com).mp3" type="audio/mpeg">
   </audio>
 
   <!-- partial -->
